# unnamed_hackaton_project_1

./: .gitignore  LICENSE  README.md  evaluate_random_yolo.py  flask_api.py  generate_labels_from_model.py  generate_mixed_spectrograms.py  generate_yolo_labels.py  low_confidence_detections.json  predict_yolo.py  prepare_yolo_dataset.py  pyproject.toml  train.py
custom_model/: hyper_tune.py  predict.py  rf_classification.py
final_model/: args.yaml  results.csv
predict/: package.json
predict/app/: globals.css  page.tsx
predict/app/edit/[filename]/: page.tsx
predict/app/low-confidence/: page.tsx
predict/components/: LowConfidenceImageCard.tsx
